test_regress/t/t_vlt_match_error_2.out
%Error: t/t_vlt_match_error.v:19:27: Can't find definition of variable: 'EC_ERROR'
   19 |     initial $readmemh("", EC_ERROR);
      |                           ^~~~~~~~
%Error: Exiting due to
